# test1

./: .env  Cargo.toml  Dockerfile  README.md  fly.toml  inventory.db
src/: lib.rs  main.rs
src/auth/: jwt.rs  password.rs
src/config/: mod.rs
src/db/: mod.rs  schema.rs
src/handlers/: auth.rs  categories.rs  inventory.rs  mod.rs  reports.rs  transactions.rs  users.rs
src/models/: category.rs  inventory_item.rs  inventory_item_fixed2.rs  mod.rs  transaction.rs  user.rs
src/utils/: middleware.rs
