[package]
name = "inventory_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
# Database
rusqlite = { version = "0.30.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"

# Web framework
actix-web = "4.4.0"
actix-rt = "2.9.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
futures = "0.3.28"

# Serialization/Deserialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# Authentication & Security
argon2 = "0.5.2"
rand = "0.8.5"
jsonwebtoken = "9.1.0"

# Logging
env_logger = "0.10.0"
log = "0.4.20"

# Utilities
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
thiserror = "1.0.49"

# CLI Dependencies
clap = "3.2.25"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
colored = "2.0.4"
prettytable-rs = "0.10.0"
dialoguer = "0.10.4"
